--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -109,6 +109,17 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVE
 	  loading your cpufreq low-level hardware driver, using the
 	  'interactive' governor for latency-sensitive workloads.
 
+config CPU_FREQ_DEFAULT_GOV_SMARTASSH3
+	bool "smartassh3"
+	select CPU_FREQ_GOV_SMARTASSH3
+	help	
+
+config CPU_FREQ_DEFAULT_GOV_SMARTASSV2
+	bool "smartass2"
+	select CPU_FREQ_GOV_SMARTASSV2
+	help
+		Use the CPUFreq governor 'smartassV2' as default.
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -205,6 +216,22 @@ config CPU_FREQ_GOV_CONSERVATIVE
 	  For details, take a look at linux/Documentation/cpu-freq.
 
 	  If in doubt, say N.
+
+config CPU_FREQ_GOV_SMARTASS2
+	tristate "'smartassV2' cpufreq governor"
+	depends on CPU_FREQ
+	help
+	  'smartassV2' - a "smart" optimized governor!
+
+	  If in doubt, say N.
+	  
+config CPU_FREQ_GOV_SMARTASSH3
+  tristate "'SmartassH3' cpufreq governor"
+  depends on CPU_FREQ
+  help
+    'SmartassH3' - a "smartassV2 with tweaks by H3ROS" governor!
+
+    If in doubt, say N.
 
 config SEC_DVFS
 	bool "DVFS job"
